; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_nfs4proc.c_nfs4_close_clear_stateid_flags.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_nfs4proc.c_nfs4_close_clear_stateid_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfs4_state = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@FMODE_READ = common dso_local global i32 0, align 4
@NFS_O_RDONLY_STATE = common dso_local global i32 0, align 4
@FMODE_WRITE = common dso_local global i32 0, align 4
@NFS_O_WRONLY_STATE = common dso_local global i32 0, align 4
@NFS_O_RDWR_STATE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nfs4_state*, i32)* @nfs4_close_clear_stateid_flags to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nfs4_close_clear_stateid_flags(%struct.nfs4_state* %0, i32 %1) #0 {
  %3 = alloca %struct.nfs4_state*, align 8
  %4 = alloca i32, align 4
  store %struct.nfs4_state* %0, %struct.nfs4_state** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.nfs4_state*, %struct.nfs4_state** %3, align 8
  %6 = getelementptr inbounds %struct.nfs4_state, %struct.nfs4_state* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = call i32 @spin_lock(i32* %8)
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* @FMODE_READ, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %19, label %14

14:                                               ; preds = %2
  %15 = load i32, i32* @NFS_O_RDONLY_STATE, align 4
  %16 = load %struct.nfs4_state*, %struct.nfs4_state** %3, align 8
  %17 = getelementptr inbounds %struct.nfs4_state, %struct.nfs4_state* %16, i32 0, i32 1
  %18 = call i32 @clear_bit(i32 %15, i32* %17)
  br label %19

19:                                               ; preds = %14, %2
  %20 = load i32, i32* %4, align 4
  %21 = load i32, i32* @FMODE_WRITE, align 4
  %22 = and i32 %20, %21
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %29, label %24

24:                                               ; preds = %19
  %25 = load i32, i32* @NFS_O_WRONLY_STATE, align 4
  %26 = load %struct.nfs4_state*, %struct.nfs4_state** %3, align 8
  %27 = getelementptr inbounds %struct.nfs4_state, %struct.nfs4_state* %26, i32 0, i32 1
  %28 = call i32 @clear_bit(i32 %25, i32* %27)
  br label %29

29:                                               ; preds = %24, %19
  %30 = load i32, i32* @NFS_O_RDWR_STATE, align 4
  %31 = load %struct.nfs4_state*, %struct.nfs4_state** %3, align 8
  %32 = getelementptr inbounds %struct.nfs4_state, %struct.nfs4_state* %31, i32 0, i32 1
  %33 = call i32 @clear_bit(i32 %30, i32* %32)
  %34 = load %struct.nfs4_state*, %struct.nfs4_state** %3, align 8
  %35 = getelementptr inbounds %struct.nfs4_state, %struct.nfs4_state* %34, i32 0, i32 0
  %36 = load %struct.TYPE_2__*, %struct.TYPE_2__** %35, align 8
  %37 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %36, i32 0, i32 0
  %38 = call i32 @spin_unlock(i32* %37)
  ret void
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @clear_bit(i32, i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
